fix countrybar.js element not showing up

--- a/style.css
+++ b/style.css
@@ -43,6 +43,14 @@ h1, h2, h3 {
   align-items: center; /* Center horizontally */
 }
 
+.bar-chart-container {
+  display: flex;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+  width: 100%;
+  height: 100%
+}
+
 /*I added this*/
 .point {
 	stroke-width: 3;
